# Notly

./: .gitignore  README.md  build-log.txt  eslint.config.js  implementation_plan.md.resolved  index.html  lint.json  lint_components.txt  lint_components_2.txt  lint_final_warnings.txt  lint_full.json  lint_hooks.txt  lint_lib.txt  lint_report.txt  lint_report_remaining.txt  lint_stylish.txt  lint_ui.txt  notes.md  package.json  pnpm-lock.yaml  tailwind.config.ts  task.md.resolved  visual-thinking-prd.md  vite.config.ts
.AI/: notes.md  task.md.resolved
.assets/: assets.ai  logo copy.psd
.github/workflows/: release.yml
pixel-perfect-pages-main/: package-lock.json  package.json  tailwind.config.ts
pixel-perfect-pages-main/src/: index.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: database.rs
src-tauri/src/db/: schema.sql
src/components/: AppInitializer.tsx  ErrorBoundary.tsx
src/config/: zoomConfig.ts
src/context/: editor-context.ts
src/hooks/: use-toast.ts  useAdobeZoom.ts  useEditor.ts  useEditorContext.tsx  useKeyboardShortcuts.ts  useSnapshotCache.ts
src/lib/: assetManager.ts  canvasUtils.ts  cardEvents.ts  constants.ts  errorHandling.ts  importExport.ts  logger.ts  pdfEvents.ts  performance.ts  projectBundle.ts  search.ts  searchFTS.ts  tldrawAssetStore.ts
src/pages/: Index.tsx  Projects.tsx
src/stores/: backupStore.ts  canvasStore.ts  cardStore.ts  favoritesStore.ts  fileStore.ts  index.ts  types.ts  (+11 more)
(+60 files in other folders)
